--- a/app/components/abilities/ability.tpl.html
+++ b/app/components/abilities/ability.tpl.html
@@ -1,16 +1,16 @@
-<div class="ability-row">
-    <div class="ability">
-        <h3 class="ability__name">{{ vm.ability.name }}</h3>
+<div class="o-page__row">
+    <div class="o-ability">
+        <h3 class="o-ability__name">{{ vm.ability.name }}</h3>
         <input type="text" pattern="[0-9+-]*" ng-model="vm.ability.points"
-            class="ability__value"
+            class="o-ability__value"
         />
-        <p class="ability__modifier">{{ vm.ability.modifier | modifier }}</p>
+        <p class="o-ability__modifier">{{ vm.ability.modifier | modifier }}</p>
     </div>
-    <ul class="skills">
-        <li ng-repeat="skill in vm.ability.skills" class="skills__item">
-            <input type="checkbox" ng-model="skill.isProficient" class="skills__proficiency"/>
-            <span class="skills__modifier">{{ vm.getModifier(skill) | modifier }}</span>
-            <span class="skills__name">{{ skill.name }}</span>
+    <ul class="o-skills">
+        <li ng-repeat="skill in vm.ability.skills" class="o-skills__item">
+            <input type="checkbox" ng-model="skill.isProficient" class="o-skills__proficiency"/>
+            <span class="o-skills__modifier">{{ vm.getModifier(skill) | modifier }}</span>
+            <span class="o-skills__name">{{ skill.name }}</span>
         </li>
     </ul>
 </div>
