--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -1,43 +1,64 @@
 <form>
-    <h1>Character Sheet</h1>
-    <header class="header">
-        <div class="header__name">
-            <label class="inline-field">
-                <span class="inline-field__label">Name</span>
-                <input class="inline-field__field" ng-model="vm.character.name"  type="text" />
+    <header class="o-header">
+        <div class="o-header__name">
+            <label class="c-inline-field">
+                <span class="c-inline-field__label">Character Name</span>
+                <input class="c-inline-field__field" ng-model="vm.character.name"  type="text" />
             </label>
         </div>
 
-        <div class="header__details">
-            <div class="header__detail">
-                <character-detail label="Class"             value="vm.character.details.class"></character-detail>
-                <div class="inline-field inline-field--small">
-                    <span class="inline-field__label">Level</span>
-                    <span class="inline-field__field">{{ vm.character.level }}</span>
+        <div class="o-header__details">
+            <div class="o-header__detail">
+                <character-detail label="Class"
+                                  value="vm.character.details.class"></character-detail>
+                <div class="c-inline-field c-inline-field--small">
+                    <span class="c-inline-field__label">Level</span>
+                    <span class="c-inline-field__field">{{ vm.character.level }}</span>
                 </div>
             </div>
-            <character-detail class="header__detail"
-                    label="Background"        value="vm.character.details.background"></character-detail>
-            <character-detail class="header__detail"
-                    label="Player Name"       value="vm.character.details.playerName"></character-detail>
-            <character-detail class="header__detail"
-                    label="Race"              value="vm.character.details.race"></character-detail>
-            <character-detail class="header__detail"
-                    label="Alignment"         value="vm.character.details.alignment" options="vm.alignments"></character-detail>
-            <character-detail class="header__detail"
-                    label="Experience Points" value="vm.character.details.xp" type="number"></character-detail>
+            <character-detail class="o-header__detail"
+                              label="Background"
+                              value="vm.character.details.background"></character-detail>
+            <character-detail class="o-header__detail"
+                              label="Player Name"
+                              value="vm.character.details.playerName"></character-detail>
+            <character-detail class="o-header__detail"
+                              label="Race"
+                              value="vm.character.details.race"></character-detail>
+            <character-detail class="o-header__detail"
+                              label="Alignment"
+                              value="vm.character.details.alignment"
+                              options="vm.alignments"></character-detail>
+            <character-detail class="o-header__detail"
+                              label="Experience Points"
+                              value="vm.character.details.xp"
+                              type="number"></character-detail>
         </div>
     </header>
 
-    <div class="body">
-        <div class="body__column">
-            Proficiency Bonus: {{ vm.character.proficiencyBonus | modifier }}
-            <ability ability="ability" ng-repeat="ability in vm.character.abilities" proficiency-bonus="vm.character.proficiencyBonus"></ability>
-            <span>{{ vm.character.passiveWisdom }} Passive Wisdom (Perception)</span>
+    <div class="o-page">
+        <div class="o-page__column">
+            <div class="o-ability-property">
+                <span class="o-ability-property__label">Proficiency Bonus</span>
+                <span class="o-ability-property__modifier">{{ vm.character.proficiencyBonus | modifier }}</span>
+            </div>
+            <label class="o-ability-property">
+                <span class="o-ability-property__label">Inspiration</span>
+                <input class="o-ability-property__modifier" type="text" pattern="[+-]?[0-9]+"/>
+            </label>
+
+            <ability ng-repeat="ability in vm.character.abilities"
+                     ability="ability"
+                     proficiency-bonus="vm.character.proficiencyBonus"></ability>
+
+            <div class="o-ability-property">
+                <span class="o-ability-property__label">Passive Wisdom (Perception)</span>
+                <span class="o-ability-property__modifier">{{ vm.character.passiveWisdom }}</span>
+            </div>
         </div>
 
-        <div class="body__column"></div>
-        <div class="body__column"></div>
+        <div class="o-page__column"></div>
+        <div class="o-page__column"></div>
     </div>
 
 </form>
