--- a/app/components/character-builder/character-detail/character-detail.tpl.html
+++ b/app/components/character-builder/character-detail/character-detail.tpl.html
@@ -1,9 +1,9 @@
-<label class="inline-field">
-    <span class="inline-field__label">{{ vm.label }}</span>
+<label class="c-inline-field">
+    <span class="c-inline-field__label">{{ vm.label }}</span>
     <input ng-model="vm.value" type="{{ vm.type || 'text' }}" name="{{ vm.label }}"
-           class="inline-field__field" ng-if="!vm.options" />
+           class="c-inline-field__field" ng-if="!vm.options" />
     <select ng-model="vm.value" ng-if="vm.options" ng-options="index as choice for (index, choice) in vm.options"
-            class="inline-field__field"
+            class="c-inline-field__field"
             ng-change="vm.select()">
         <option value=""></option>
     </select>
