--- a/app/style/components/_c-inline-field.scss
+++ b/app/style/components/_c-inline-field.scss
@@ -24,7 +24,7 @@
 	width: 100%;
 	border: none;
 	outline: none;
-	border-bottom: 1px solid #363636;
+	border-bottom: 1px solid $border-color;
 	background: none;
 }
 
