--- a/app/style/objects/_o-ability-property.scss
+++ b/app/style/objects/_o-ability-property.scss
@@ -12,7 +12,7 @@
 
 .o-ability-property__modifier {
 	order: 1;
-	border: 2px solid #363636;
+	border: 2px solid $border-color;
 	border-radius: 10px;
 	height: 40px;
 	width: 70px;
@@ -44,6 +44,6 @@
 	text-transform: uppercase;
 	font-size: 12px;
 
-	border: 1px solid #363636;
+	border: 1px solid $border-color;
 	border-radius: 6px;
 }
