--- a/app/style/objects/_o-skills.scss
+++ b/app/style/objects/_o-skills.scss
@@ -9,10 +9,10 @@
 
 .o-skills__modifier {
 	display: inline-block;
-	border-bottom: 1px solid #363636;
+	border-bottom: 1px solid $border-color;
 	padding: 0 4px;
 	min-width: 25px;
-	height: 15px;
+	height: 18px;
 	line-height: 15px;
 	font-size: 13px;
 	text-align: center;
