--- a/app/style/components/_c-fake-checkbox.scss
+++ b/app/style/components/_c-fake-checkbox.scss
@@ -5,8 +5,10 @@
 }
 .c-fake-checkbox__element {
 	display: inline-block;
-	width: 14px;
-	height: 14px;
+	width: 12px;
+	height: 12px;
+	position: relative;
+	top: 2px;
 
 	border-radius: 50%;
 	border: 2px solid $border-color;
