--- a/app/style/objects/_o-ability.scss
+++ b/app/style/objects/_o-ability.scss
@@ -1,39 +1,28 @@
 .o-ability {
-	background-color: white;
-	display: flex;
-	border: 1px solid $border-color;
-	border-radius: 3px;
-	width: 100px;
-	height: 100px;
-	position: relative;
+	margin-top: 10px;
+}
 
-	flex-direction: column;
-	flex-wrap: nowrap;
-}
-.o-ability__name {
-	order: 3;
-	width: 100%;
-	font-size: 10px;
-	text-transform: uppercase;
-	text-align: center;
-	padding: 4px;
-}
-.o-ability__value {
-	order: 1;
-	border: none;
-	outline: none;
-	border-bottom: 1px solid $border-color;
-	width: 100%;
-	background: none;
-	text-align: center;
-	padding: 6px 4px;
-}
 .o-ability__modifier {
-	order: 2;
-	width: 100%;
-	flex-grow: 1;
 	font-size: 30px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	padding-top: 20px;
+	min-height: 65px;
+}
+
+.o-ability__value {
+	position: absolute;
+	top: -10px;
+	left: 50%;
+	@include transform(translateX(-50%));
+	width: 60px;
+	border: 1px solid $border-color;
+	outline: none;
+	background: white;
+	text-align: center;
+	padding: 6px 4px;
+	font-size: 14px;
+	border-radius: 4px;
 }
