Nicer styles for header items

--- a/app/style/components/_c-inline-field.scss
+++ b/app/style/components/_c-inline-field.scss
@@ -19,21 +19,22 @@
 	display: block;
 	height: 30px;
 	font-size: 20px;
+	line-height: 25px;
 	vertical-align: text-bottom;
 	padding: 2px 4px;
 	width: 100%;
 	border: none;
 	outline: none;
-	border-bottom: 1px solid $border-color;
+	border-bottom: 1px dotted lighten($border-color, 50);
 	background: none;
 }
 
 .c-inline-field__label {
 	display: inline-block;
-	font-size: 10px;
+	font-size: 11px;
 	text-transform: uppercase;
 	position: absolute;
 	left: 0;
 	top: 30px;
-	padding: 2px 4px;
+	padding: 4px;
 }
