--- a/app/components/labelled-box/labelled-box.tpl.html
+++ b/app/components/labelled-box/labelled-box.tpl.html
@@ -1,4 +1,4 @@
-<div class="c-labelled-box">
-    <h3 class="c-labelled-box__label">{{ label }}</h3>
-    <div class="c-labelled-box__content" ng-transclude></div>
+<div class="o-labelled-box">
+    <h3 class="o-labelled-box__label">{{ label }}</h3>
+    <div class="o-labelled-box__content" ng-transclude></div>
 </div>
