--- a/app/style/components/_all.scss
+++ b/app/style/components/_all.scss
@@ -1,3 +1,11 @@
-@import "c-inline-field";
-@import "c-fake-checkbox";
-@import "c-labelled-box";
+@import "c-title";
+@import "c-header";
+@import "c-page";
+@import "c-ability-property";
+@import "c-ability";
+@import "c-skills";
+@import "c-combat";
+@import "c-combat-counter";
+@import "c-temporary-hitpoints";
+@import "c-hit-dice";
+@import "c-death-saves";
