--- a/app/style/components/_c-page.scss
+++ b/app/style/components/_c-page.scss
@@ -1,10 +1,10 @@
-.o-page {
+.c-page {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
 
-.o-page__column {
+.c-page__column {
 	flex-basis: 330px;
 	flex-grow: 1;
 	flex-shrink: 0;
@@ -20,11 +20,16 @@
 }
 
 // Inside columns
-.o-page__row {
+.c-page__row {
 	width: 100%;
 	display: flex;
 	flex-wrap: nowrap;
 	flex-direction: row;
 	padding: 10px;
 	justify-content: space-between;
+	margin-right: -10px;
+
+	> * {
+		margin-right: 10px; // Space between elements
+	}
 }
