--- a/app/style/objects/_all.scss
+++ b/app/style/objects/_all.scss
@@ -1,7 +1,3 @@
-@import "o-title";
-@import "o-header";
-@import "o-page";
-@import "o-ability-property";
-@import "o-ability";
-@import "o-skills";
-@import "o-character-value";
+@import "o-inline-field";
+@import "o-fake-checkbox";
+@import "o-labelled-box";
