--- a/app/style/components/_c-ability-property.scss
+++ b/app/style/components/_c-ability-property.scss
@@ -1,4 +1,4 @@
-.o-ability-property {
+.c-ability-property {
 	width: 100%;
 	padding: 2px 20px 2px 40px;
 	height: 40px;
@@ -10,14 +10,13 @@
 	position: relative;
 }
 
-.o-ability-property__modifier {
+.c-ability-property__modifier {
 	order: 1;
 	border: 2px solid $border-color;
 	border-radius: 10px;
 	height: 40px;
 	width: 70px;
 	font-size: 20px;
-	outline: none;
 	background-color: white;
 	display: inline-flex;
 	justify-content: center;
@@ -30,7 +29,7 @@
 	z-index: 1;
 }
 
-.o-ability-property__label {
+.c-ability-property__label {
 	order: 2;
 	background-color: white;
 	padding: 0 10px 0 64px;
