Initial print styles

--- a/app/style/base/_html-body.scss
+++ b/app/style/base/_html-body.scss
@@ -1,4 +1,13 @@
 html {
 	color: $primary-font-color;
 	font-family: $font-default;
+
+	font-size: $font-size-base;
+
+	@media print {
+		font-size: 4px;
+	}
+	&.print {
+		font-size: 4px;
+	}
 }
