--- a/app/style/components/_c-combat.scss
+++ b/app/style/components/_c-combat.scss
@@ -11,7 +11,7 @@
 	width: 100px;
 	background: none;
 	border: none;
-	font-size: 30px;
+	font-size: toRem(30px);
 	text-align: center;
 
 	display: flex;
