--- a/app/style/components/_c-ability-property.scss
+++ b/app/style/components/_c-ability-property.scss
@@ -16,7 +16,7 @@
 	border-radius: 10px;
 	height: 40px;
 	width: 70px;
-	font-size: 20px;
+	font-size: toRem(20px);
 	background-color: white;
 	display: inline-flex;
 	justify-content: center;
@@ -41,7 +41,7 @@
 	flex-grow: 1;
 	flex-basis: 100px;
 	text-transform: uppercase;
-	font-size: 12px;
+	font-size: toRem(12px);
 
 	border: 1px solid $border-color;
 	border-radius: 6px;
