--- a/app/style/components/_c-ability.scss
+++ b/app/style/components/_c-ability.scss
@@ -1,16 +1,27 @@
 .c-ability {
 	margin-top: 10px;
 	min-width: 100px;
+
+	@media print {
+		min-width: 60px;
+	}
 }
 
 .c-ability__modifier {
-	font-size: 30px;
+	font-size: toRem(30px);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 
 	padding-top: 20px;
 	min-height: 65px;
+
+	@media print {
+		display: block;
+		flex-grow: 0;
+		min-height: 30px;
+		max-height: 30px;
+	}
 }
 
 .c-ability__value {
@@ -23,6 +34,10 @@
 	background: white;
 	text-align: center;
 	padding: 6px 4px;
-	font-size: 14px;
+	font-size: toRem(14px);
 	border-radius: 4px;
+
+	@media print {
+		width: 30px; // TODO this needs figuring out with the backgrounds etc.
+	}
 }
