--- a/app/style/components/_c-combat-counter.scss
+++ b/app/style/components/_c-combat-counter.scss
@@ -7,7 +7,7 @@
 
 .c-combat-counter__limitLabel {
 	text-transform: uppercase;
-	font-size: 11px;
+	font-size: toRem(11px);
 	white-space: nowrap;
 }
 .c-combat-counter__limitLabel--small {
@@ -15,13 +15,13 @@
 }
 
 .c-combat-counter__limitInput {
-	width: 50px; // Will grow
+	width: toRem(50px); // Will grow
 	flex-shrink: 1;
 	flex-grow: 1;
 	margin-left: 6px;
 	border: none;
 	border-bottom: 1px dotted lighten($border-color, 40);
-	font-size: 14px;
+	font-size: toRem(14px);
 }
 
 .c-combat-counter__valueWrapper {
@@ -31,7 +31,7 @@
 
 .c-combat-counter__value {
 	width: 100%;
-	min-height: 40px;
+	min-height: toRem(40px);
 	padding: 4px 0;
 	border: 0;
 	resize: none;
@@ -39,5 +39,5 @@
 }
 
 .c-combat-counter__value--large {
-	min-height: 56px;
+	min-height: toRem(56px);
 }
