--- a/app/style/components/_c-hit-dice.scss
+++ b/app/style/components/_c-hit-dice.scss
@@ -11,7 +11,7 @@
 }
 
 .c-hit-dice__totalLabel {
-	font-size: 11px;
+	font-size: toRem(11px);
 }
 
 .c-hit-dice__totalInput {
@@ -21,7 +21,7 @@
 	margin-left: 6px;
 	border: none;
 	border-bottom: 1px dotted lighten($border-color, 40);
-	font-size: 14px;
+	font-size: toRem(14px);
 }
 
 .c-hit-dice__value {
