--- a/app/style/components/_c-page.scss
+++ b/app/style/components/_c-page.scss
@@ -17,6 +17,12 @@
 	margin: 10px;
 	background-color: #f0f0f0;
 	border-radius: 10px;
+
+	@media print {
+		flex-basis: 200px;
+		padding: 0;
+		border: 1px solid black; // DEBUG
+	}
 }
 
 // Inside columns
@@ -31,5 +37,9 @@
 
 	> * {
 		margin-right: 10px; // Space between elements
+	}
+
+	@media print {
+		padding: 1px;
 	}
 }
