--- a/app/style/components/_c-skills.scss
+++ b/app/style/components/_c-skills.scss
@@ -13,12 +13,12 @@
 	min-width: 25px;
 	height: 15px;
 	line-height: 15px;
-	font-size: 13px;
+	font-size: toRem(13px);
 	text-align: center;
 	vertical-align: bottom;
 }
 
 .c-skills__name {
 	text-transform: uppercase;
-	font-size: 11px;
+	font-size: toRem(11px);
 }
