--- a/app/style/objects/_o-inline-field.scss
+++ b/app/style/objects/_o-inline-field.scss
@@ -18,7 +18,7 @@
 .o-inline-field__field {
 	display: block;
 	height: 30px;
-	font-size: 20px;
+	font-size: toRem(20px);
 	line-height: 25px;
 	vertical-align: text-bottom;
 	padding: 2px 4px;
@@ -30,7 +30,7 @@
 
 .o-inline-field__label {
 	display: inline-block;
-	font-size: 11px;
+	font-size: toRem(11px);
 	text-transform: uppercase;
 	position: absolute;
 	left: 0;
