--- a/app/style/components/_c-combat.scss
+++ b/app/style/components/_c-combat.scss
@@ -8,7 +8,7 @@
 
 .c-combat__fixedValue {
 	height: 50px;
-	width: 100px;
+	width: 100%;
 	background: none;
 	border: none;
 	font-size: toRem(30px);
