--- a/app/components/character-builder/character-detail/character-detail.tpl.html
+++ b/app/components/character-builder/character-detail/character-detail.tpl.html
@@ -1,9 +1,10 @@
 <label class="o-inline-field">
     <span class="o-inline-field__label">{{ vm.label }}</span>
     <input ng-model="vm.value" type="{{ vm.type || 'text' }}" name="{{ vm.label }}"
-           class="o-inline-field__field" ng-if="!vm.options" />
+           class="o-inline-field__field" ng-if="!vm.options" required />
     <select ng-model="vm.value" ng-if="vm.options" ng-options="index as choice for (index, choice) in vm.options"
             class="o-inline-field__field"
+            required
             ng-change="vm.select()">
         <option value=""></option>
     </select>
