--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -1,3 +1,6 @@
+<menu character="vm.character" is-valid="vm.isFormValid()"></menu>
+<h1 class="c-title">Character Sheet</h1>
+
 <form name="characterBuilder">
     <header class="c-header">
         <div class="c-header__name">
