--- a/app/style/objects/_o-fake-checkbox.scss
+++ b/app/style/objects/_o-fake-checkbox.scss
@@ -17,6 +17,11 @@
 		background-color: #828282;
 	}
 
+	.o-fake-checkbox--special + & {
+		border-radius: 2px;
+		@include transform(rotate(45deg) scale(0.9));
+	}
+
 	@media print {
 		border-width: 1px;
 		width: 8px;
